# arsenalStats

./: .gitignore  LICENSE  MakeFile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
batching/code/arsPRJ/: data_etl.py
batching/code/arsPRJ.egg-info/: PKG-INFO  SOURCES.txt
batching/container/pipelinerunner/: DockerFile  entrypoint.sh  requirements.txt
batching/schedule/: crontab
grafana/dashboards/: arsenal_data.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: prometheus.yml
postgesql/: create_table.sql  trigger.sql
prometheus/: prometheus.yml  rules.yml
sample json/: detail_sample.json  game_stats.json  get_live_tour.json  leagues.json  live_match_details.json  next_match.json  player_details_sample.json  players_sample.json  sample.json  sample_stats.json  team_details.json  test.json
src/arsPRJ.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/arsPRJ/utils/: db_config.py  db_connection.py
streaming/code/: match_stream.py
streaming/code/process/: arsenal_live_match.sql
streaming/code/producer/: DockerFile  match_producer.py
streaming/code/sink/: arsenal_match_stats.sql
streaming/code/source/: arsenal_live_match.sql
streaming/container/flink/: DockerFile  requirements.txt
terraform/: .terraform.lock.hcl  batching.tf  flink.tf  kafka.tf  main.tf  monitoring.tf  postgres.tf  producer.tf  provider.tf  secrets.tf  variables.tf  zookeeper.tf
